add customized user newsfeed api
